--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=f35cfed739516fab11de757f3426fb81
+APP_SECRET=0ebf933e074789896d05ad3cd098908b
 ###< symfony/framework-bundle ###
 
 ###> symfony/webapp-pack ###
@@ -29,7 +29,7 @@ MESSENGER_TRANSPORT_DSN=doctrine://default?auto_setup=0
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8&charset=utf8mb4"
-DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=14&charset=utf8"
+DATABASE_URL="mysql://tutorial:secret@mysql:3306/tutorial?serverVersion=mariadb-10.8.3&charset=utf8mb4"
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
@@ -40,5 +40,12 @@ DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=14&ch
 ###< symfony/messenger ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=null://null
+MAILER_DSN=smtp://700470332955d4:795ed89173da04@smtp.mailtrap.io:2525?encryption=tls&auth_mode=login
 ###< symfony/mailer ###
+
+###> pusher/pusher-php-server ###
+PUSHER_APP_ID="1482040"
+PUSHER_APP_KEY="d6af46ae18da6d9657e1"
+PUSHER_APP_SECRET="b3c8563347a36324b9cc"
+APP_CLUSTER="eu"
+###< pusher/pusher-php-server ###
