--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,21 +4,30 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
-
+  locale: 'en'
+  pusherKey: '%env(PUSHER_KEY)%'
+  pusherCluster: '%env(PUSHER_CLUSTER)%'
 services:
-    # default configuration for services in *this* file
-    _defaults:
-        autowire: true      # Automatically injects dependencies in your services.
-        autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+  # default configuration for services in *this* file
+  _defaults:
+    autowire: true      # Automatically injects dependencies in your services.
+    autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
 
-    # makes classes in src/ available to be used as services
-    # this creates a service per class whose id is the fully-qualified class name
-    App\:
-        resource: '../src/'
-        exclude:
-            - '../src/DependencyInjection/'
-            - '../src/Entity/'
-            - '../src/Kernel.php'
-
-    # add more service definitions when explicit configuration is needed
-    # please note that last definitions always *replace* previous ones
+  # makes classes in src/ available to be used as services
+  # this creates a service per class whose id is the fully-qualified class name
+  App\:
+    resource: '../src/'
+    exclude:
+      - '../src/DependencyInjection/'
+      - '../src/Entity/'
+      - '../src/Kernel.php'
+  Pusher\Pusher:
+    arguments:
+      $auth_key: '%env(PUSHER_KEY)%'
+      $secret: '%env(PUSHER_SECRET)%'
+      $app_id: '%env(PUSHER_APP_ID)%'
+      $options:
+        cluster: '%env(PUSHER_CLUSTER)%'
+        useTLS: true
+  # add more service definitions when explicit configuration is needed
+  # please note that last definitions always *replace* previous ones
